@@ -30,6 +30,8 @@ import io.harness.engine.executions.node.NodeExecutionService;
 import io.harness.engine.executions.plan.PlanExecutionService;
 import io.harness.exception.InvalidRequestException;
 import io.harness.execution.NodeExecution;
+import io.harness.plancreator.steps.barrier.BarrierStepInfo;
+import io.harness.plancreator.steps.barrier.BarrierStepNode;
 import io.harness.pms.contracts.execution.Status;
 import io.harness.repositories.BarrierNodeRepository;
 import io.harness.rule.Owner;
@@ -738,8 +740,10 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
             .identifier(barrierId)
             .planExecutionId(planExecutionId)
             .barrierState(STANDING)
-            .setupInfo(
-                BarrierSetupInfo.builder().stages(Set.of(StageDetail.builder().identifier("stage1").build())).build())
+            .setupInfo(BarrierSetupInfo.builder()
+                           .stages(Set.of(StageDetail.builder().identifier("stage1").build()))
+                           .strategySetupIds(Set.of("strategyId1"))
+                           .build())
             .positionInfo(
                 BarrierPositionInfo.builder()
                     .planExecutionId(planExecutionId)
@@ -753,8 +757,10 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
             .identifier(barrierId)
             .planExecutionId(planExecutionId)
             .barrierState(STANDING)
-            .setupInfo(
-                BarrierSetupInfo.builder().stages(Set.of(StageDetail.builder().identifier("stage2").build())).build())
+            .setupInfo(BarrierSetupInfo.builder()
+                           .stages(Set.of(StageDetail.builder().identifier("stage2").build()))
+                           .strategySetupIds(Set.of("strategyId2"))
+                           .build())
             .positionInfo(
                 BarrierPositionInfo.builder()
                     .planExecutionId(planExecutionId)
@@ -777,6 +783,8 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
                    .map(StageDetail::getIdentifier)
                    .collect(Collectors.toSet()))
         .containsExactlyInAnyOrder("stage1");
+    assertThat(barrierExecutionInstance.getSetupInfo().getStrategySetupIds().size()).isEqualTo(1);
+    assertThat(barrierExecutionInstance.getSetupInfo().getStrategySetupIds()).containsExactlyInAnyOrder("strategyId1");
     assertThat(barrierExecutionInstance.getPositionInfo()
                    .getBarrierPositionList()
                    .stream()
@@ -804,6 +812,9 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
                    .map(StageDetail::getIdentifier)
                    .collect(Collectors.toSet()))
         .containsExactlyInAnyOrder("stage1", "stage2");
+    assertThat(barrierExecutionInstance.getSetupInfo().getStrategySetupIds().size()).isEqualTo(2);
+    assertThat(barrierExecutionInstance.getSetupInfo().getStrategySetupIds())
+        .containsExactlyInAnyOrder("strategyId1", "strategyId2");
     assertThat(barrierExecutionInstance.getPositionInfo()
                    .getBarrierPositionList()
                    .stream()
@@ -822,7 +833,7 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
   @Owner(developers = VINICIUS)
   @Category(UnitTests.class)
 
-  public void testUpdateBarrierPositionInfoList() {
+  public void testUpdateBarrierPositionInfoListAndStrategyConcurrency() {
     String barrierId = "id1";
     String planExecutionId = "planId";
     BarrierPositionInfo initialPositionInfo =
@@ -891,8 +902,8 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
                    .collect(Collectors.toSet()))
         .containsOnlyNulls();
 
-    barrierService.updateBarrierPositionInfoList(
-        barrierId, planExecutionId, updatedPositionInfo.getBarrierPositionList());
+    barrierService.updateBarrierPositionInfoListAndStrategyConcurrency(
+        barrierId, planExecutionId, updatedPositionInfo.getBarrierPositionList(), "strategyId", 2);
     result = barrierService.findByPosition(planExecutionId, BarrierPositionType.STEP, "stepSetupId1");
     assertThat(result).isNotNull();
     assertThat(result).isNotEmpty();
@@ -923,6 +934,49 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
                    .map(BarrierPosition::getStrategyNodeType)
                    .collect(Collectors.toSet()))
         .containsExactlyInAnyOrder(BarrierPositionType.STAGE);
+    assertThat(updatedBarrierExecutionInstance.getSetupInfo().getStrategyConcurrencyMap().keySet())
+        .containsExactlyInAnyOrder("strategyId");
+    assertThat(updatedBarrierExecutionInstance.getSetupInfo().getStrategyConcurrencyMap().get("strategyId"))
+        .isEqualTo(2);
+  }
+
+  @Test
+  @Owner(developers = VINICIUS)
+  @Category(UnitTests.class)
+
+  public void testUpsertBarrierExecutionInstance() {
+    BarrierStepNode barrierField = new BarrierStepNode();
+    barrierField.setUuid("barrierStepId");
+    barrierField.setBarrierStepInfo(BarrierStepInfo.builder().identifier("barrierId").name("barrierName").build());
+
+    barrierService.upsertBarrierExecutionInstance(
+        barrierField, "executionId", "stepGroup", "stageId", "stepGroupId", "stepGroupId", List.of("stepGroupId"));
+    List<BarrierExecutionInstance> result =
+        barrierService.findByPosition("executionId", BarrierPositionType.STEP, "barrierStepId");
+    assertThat(result).isNotNull();
+    assertThat(result).isNotEmpty();
+    assertThat(result.size()).isEqualTo(1);
+    BarrierExecutionInstance barrierExecutionInstance = result.get(0);
+    assertThat(barrierExecutionInstance.getName()).isEqualTo("barrierName");
+    assertThat(barrierExecutionInstance.getIdentifier()).isEqualTo("barrierId");
+    assertThat(barrierExecutionInstance.getSetupInfo().getName()).isEqualTo("barrierName");
+    assertThat(barrierExecutionInstance.getSetupInfo().getIdentifier()).isEqualTo("barrierId");
+    assertThat(barrierExecutionInstance.getSetupInfo().getStages().size()).isEqualTo(1);
+    assertThat(barrierExecutionInstance.getSetupInfo()
+                   .getStages()
+                   .stream()
+                   .map(StageDetail::getIdentifier)
+                   .collect(Collectors.toList()))
+        .containsExactlyInAnyOrder("stageId");
+    assertThat(barrierExecutionInstance.getSetupInfo().getStrategySetupIds().size()).isEqualTo(1);
+    assertThat(barrierExecutionInstance.getSetupInfo().getStrategySetupIds()).containsExactlyInAnyOrder("stepGroupId");
+    assertThat(barrierExecutionInstance.getPositionInfo().getBarrierPositionList().size()).isEqualTo(1);
+    BarrierPosition barrierPosition = barrierExecutionInstance.getPositionInfo().getBarrierPositionList().get(0);
+    assertThat(barrierPosition.getStepSetupId()).isEqualTo("barrierStepId");
+    assertThat(barrierPosition.getStepGroupSetupId()).isEqualTo("stepGroupId");
+    assertThat(barrierPosition.getStageSetupId()).isEqualTo("stageId");
+    assertThat(barrierPosition.getStrategySetupId()).isEqualTo("stepGroupId");
+    assertThat(barrierPosition.getStrategyNodeType()).isEqualTo(BarrierPositionType.STEP_GROUP);
   }
 
   private BarrierExecutionInstance obtainBarrierExecutionInstance() {
@@ -939,12 +993,12 @@ public class BarrierServiceImplTest extends OrchestrationStepsTestBase {
         .barrierState(STANDING)
         .positionInfo(BarrierPositionInfo.builder()
                           .planExecutionId(planExecutionId)
-                          .barrierPositionList(ImmutableList.of(BarrierPosition.builder()
-                                                                    .stageSetupId(stageSetupId)
-                                                                    .stageRuntimeId(stageExecutionId)
-                                                                    .stepSetupId(stepSetupId)
-                                                                    .stepRuntimeId(stepExecutionId)
-                                                                    .build()))
+                          .barrierPositionList(List.of(BarrierPosition.builder()
+                                                           .stageSetupId(stageSetupId)
+                                                           .stageRuntimeId(stageExecutionId)
+                                                           .stepSetupId(stepSetupId)
+                                                           .stepRuntimeId(stepExecutionId)
+                                                           .build()))
                           .build())
         .build();
   }
